--- a/.spi.yml
+++ b/.spi.yml
@@ -2,4 +2,6 @@ version: 1
 builder:
   configs:
     - documentation_targets: [WindowSceneReader]
+      custom_documentation_parameters: [--include-extended-types]
       platform: ios
+
